# unscramble

./: .gitignore  README.md  Rakefile  hints.md
languages/OCaml/: .gitignore  Rakefile  unscramble.ml
languages/Ruby/: unscramble
languages/Rust/: Cargo.toml  Rakefile  unscramble
languages/Rust/src/: build.rs  main.rs
languages/Rust2/: Rakefile
languages/Swift/: Rakefile  Unscrambler.swift  unscramble
languages/bash/: Rakefile  unscramble
languages/c-shaan/: Rakefile  main.c
languages/elixir/: .gitignore  README.md  Rakefile
languages/elixir/lib/: cli.ex
languages/elixir/test/: unscramble_test.exs
languages/elixir_dle/: disk_storage  mix.exs
languages/elixir_dle/lib/: cli.ex  unscramble.ex
languages/elixir_ek/: .tool-versions  mix.exs
languages/elixir_ek/lib/: cli.ex  unscramble.ex
languages/elixir_overengineered/: Makefile  Rakefile  mix.exs
languages/elixir_overengineered/lib/: cache.ex
languages/elixir_sol/: .gitignore  Makefile  README.md  Rakefile  mix.exs
languages/elixir_sol/lib/: cache.ex  cli.ex  generator.ex  helpers.ex  (+1 more)
languages/elixir_sol_overengineered/: .gitignore  Makefile
languages/go/: Rakefile  unscramble.go
languages/lua/: Rakefile  unscramble  unscramble.lua
languages/nodejs/: unscramble
languages/postgres/: Rakefile  setup-database.sql  store.rb  unscramble
languages/python/: Rakefile  test.txt  unscramble  unscramble.py
languages/sqlite/: Rakefile  unscramble
languages/typescript/: Rakefile  package.json  unscramble  unscramble.ts
languages/zsh/: Rakefile  unscramble
test/: unscramble_test.rb
(+6 files in other folders)
