[package]
name = "unscramble"
version = "0.1.0"
authors = ["Joe Jackson <cpmhjoe@gmail.com>"]
edition = "2018"

build = 'src/build.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
phf  = "0.8"

[build-dependencies]
phf_codegen  = "0.8"
